--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
 <h2>El anime de pokemon esta por terminar!</h2>
 <h2>Más noticias sobre los nuevos juegos ESCARLATA y PÚRPURA</h2>
 <h2>Resultados sobre el último mundial pokemon</h2>
+
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -27,21 +28,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/algo.jpg" class="d-block w-100" alt="...">
+      <img src="img/not1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img/algo.jpg" class="d-block w-100" alt="...">
+      <img src="img/not2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img/algo.jpg" class="d-block w-100" alt="...">
+      <img src="img/not3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -57,5 +58,17 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+
+<br></br>
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col">
+      One of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columns
+    </div>
+    <div class="col">
+      One of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columns
+    </div>
+  </div>
 
 
