--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,20 +12,20 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Home</a>
+    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Tierlists</a>
+          <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Tierlist">Tierlists</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Competitivo</a>
+          <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Compe">Competitivo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Comunidad</a>
+          <a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Comunidad">Comunidad</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Anime (en construccion)</a>
@@ -40,8 +40,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="border-top footer text-muted fixed-bottom bg-white" >
+        <div class="container" style="margin-top: 1rem; margin-bottom: 1rem;">
             &copy; 2022 - Tp09_IgnacioDemarcico_TeoNavarro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
