--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,56 +15,51 @@
 
 <!--Hacer apartado noticias-->
 
-<h1>NOVEDADES</h1>
-<h2>El anime de pokemon esta por terminar!</h2>
-<h2>Más noticias sobre los nuevos juegos ESCARLATA y PÚRPURA</h2>
-<h2>Resultados sobre el último mundial pokemon</h2>
+<div class="row">
+<div class="col-6">
 
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<div class="card" style="width: 18rem;">
+  <img src="img/not1.jpg" class="card-img-top">
+  <div class="card-body">
+    <p class="card-text">NOTICIAS SOBRE LOS NUEVOS JUEGOS!</p>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/not1.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="img/not2.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="img/not3.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
 
+<div class="card" style="width: 18rem;">
+  <img src="img/not2.jpg" class="card-img-top" >
+  <div class="card-body">
+    <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
+  </div>
+</div>
+
+</div>
+</div>
+
+<div class="row">
+<div class="col-12">
+
+<div class="card" style="width: 18rem;">
+  <img src="img/not3.jpg" class="card-img-top" >
+  <div class="card-body">
+    <p class="card-text">EL TORNEO MUNDIAL DE POKEMON HA FINALIZADO</p>
+  </div>
+</div>
+
+<div class="card" style="width: 18rem;">
+  <img src="img/not4.jpg" class="card-img-top">
+  <div class="card-body">
+    <p class="card-text">NUEVO SET DE CARTAS "ORIGEN PERDIDO"</p>
+  </div>
+</div>
+
+</div>
+</div>
 
 <br></br>
 <div class="container text-center">
   <div class="row align-items-start">
     <div class="col">
-      One of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columns
+      asdasdasdadasdasdds
     </div>
     <div class="col">
       One of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columns
