--- a/Views/Home/Tierlist.cshtml
+++ b/Views/Home/Tierlist.cshtml
@@ -15,21 +15,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="img/algo.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="img/algo.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="img/algo.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -45,3 +45,8 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<h2 url="https://tiermaker.com/create/all-pokemon-starters,-all-evolutions-2897"> Tierlist de iniciales</h2>
+<h2 url="https://tiermaker.com/create/all-pokmon-in-pokmon-unite-15327428"> Tierlist de Pokemon unite(clefable)</h2>
+<h2 url="https://tiermaker.com/create/vgc-2022-viability-rankings-795763"> Pokemon en VGC </h2>
+<h2 urñ="https://tiermaker.com/create/pvp-strength----mega-pokemon-pokemon-go-289866"> Mega evoluciones</h2>
