--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <head>
-
+<img src="img/logo.png">
 </head>
 
 
@@ -16,7 +16,7 @@
 <!--Hacer apartado noticias-->
 
 <div class="row">
-<div class="col-6">
+<div class="col-6" id="Col-cards">
 
 <div class="card" style="width: 18rem;">
   <img src="img/not1.jpg" class="card-img-top">
@@ -59,10 +59,10 @@
 <div class="container text-center">
   <div class="row align-items-start">
     <div class="col">
-      asdasdasdadasdasdds
+      En otras noticias, Se ha anunciado un nuevo pokemon llamado Greavard del tipo fantasma para el pokemon escarlata y púrpura.
     </div>
     <div class="col">
-      One of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columnsOne of three columns
+      Acaba de iniciar el evento de Halloween en pokemon go. Los pokemon tipo fantasma tienen mas ratio de aparición y hay regalos diarios.
     </div>
   </div>
 
