--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 
 
-<body background="/img/fondo_index.png">
+<body background = "/img/algo.jpg">
     <div class="text-center">
     <h1 class="display-4">Pokebae</h1>
 </body>
