--- a/Views/Home/Tierlist.cshtml
+++ b/Views/Home/Tierlist.cshtml
@@ -2,45 +2,20 @@
     ViewData["Title"] = "";
 }
  <h1>Tierlist</h1>
-<head></head>
-<body>
 
-</body>
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" >
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="/img/algo.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/img/algo.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/img/algo.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+<head>
+<br>
+</head>
+
+<body background = "/img/algo.jpg">
+<div class="list-group">
+  <a href="#" class="list-group-item list-group-item-action active" aria-current="false">
+   Lista Tierlists
+  </a>
+  <a href="https://tiermaker.com/create/inicialesdepokmon-23530" target = "blank" class="list-group-item list-group-item-action">Iniciales</a>
+  <a href="https://tiermaker.com/create/all-pokmon-in-pokmon-unite-15327428" target = "blank" class="list-group-item list-group-item-action">Pokemon Unite</a>
+  <a href="https://tiermaker.com/create/vgc-2021--238373" target = "blank" class="list-group-item list-group-item-action">Vgc</a>
+  <a href="https://tiermaker.com/create/megaevoluciones-575981" target = "blank" class="list-group-item list-group-item-action">Megaevoluciones</a>
+  <a class="list-group-item list-group-item-action disabled">Gigamax(Proximamente)</a>
 </div>
+</body>
