--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -1,8 +1,84 @@
 @{
     ViewData["Title"] = "";
 }
-<h1>Comunidad</h1>
+<body  background = "/img/algo.jpg">
+    <div class="text-center">
+<h2 style="color:#FFFFFF">Pokemon creados por la comunidad</h2>
+</div>
+<br>
+<br>
+<h3 style="color:#FFFFFF">Buscar Pokemon</h2>
 
-<h2>Pokemon creados por la comunidad</h2>
 
-Corusel
+
+<h3 style="color:#FFFFFF">Crear Pokemon</h2>
+
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon1">Nombre</span>
+  <input type="text" class="form-control" aria-describedby="basic-addon1">
+</div>
+
+<div class="input-group mb-3">
+  <label class="input-group-text" for="inputGroupSelect01">Primer Tipo</label>
+  <select class="form-select" id="inputGroupSelect01">
+    <option selected>Choose...</option>
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+    <option value="4">One</option>
+    <option value="5">Two</option>
+    <option value="6">Three</option>
+    <option value="7">One</option>
+    <option value="8">Two</option>
+    <option value="9">Three</option>
+    <option value="10">One</option>
+    <option value="11">Two</option>
+    <option value="12">Three</option>
+    <option value="13">One</option>
+    <option value="14">Two</option>
+    <option value="15">Three</option>
+    <option value="16">One</option>
+    <option value="17">Two</option>
+    <option value="18">Three</option>
+  </select>
+</div>
+
+<div class="input-group mb-3">
+  <label class="input-group-text" for="inputGroupSelect01">Segundo Tipo(Opcional)</label>
+  <select class="form-select" id="inputGroupSelect01">
+    <option selected>Choose...</option>
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+    <option value="4">One</option>
+    <option value="5">Two</option>
+    <option value="6">Three</option>
+    <option value="7">One</option>
+    <option value="8">Two</option>
+    <option value="9">Three</option>
+    <option value="10">One</option>
+    <option value="11">Two</option>
+    <option value="12">Three</option>
+    <option value="13">One</option>
+    <option value="14">Two</option>
+    <option value="15">Three</option>
+    <option value="16">One</option>
+    <option value="17">Two</option>
+    <option value="18">Three</option>
+  </select>
+</div>
+
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3">Altura</span>
+  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+</div>
+
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3">Peso</span>
+  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+</div>
+
+<div class="input-group mb-3">
+  <input type="file" class="form-control" id="inputGroupFile02">
+  <label class="input-group-text" for="inputGroupFile02">Upload</label>
+</div>
