--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,9 +7,10 @@
 </head>
 
 
-<body background = "/img/algo.jpg">
+<body  background = "/img/algo.jpg">
     <div class="text-center">
-    <h1 class="display-4">Pokebae</h1>
+    <h1 class="display-4" style="color:#FFFFFF">Pokebae</h1>
+
 </body>
 
 
@@ -58,10 +59,10 @@
 <br></br>
 <div class="container text-center">
   <div class="row align-items-start">
-    <div class="col">
+    <div class="col" style="color:#FFFFFF">
       En otras noticias, Se ha anunciado un nuevo pokemon llamado Greavard del tipo fantasma para el pokemon escarlata y púrpura.
     </div>
-    <div class="col">
+    <div class="col" style="color:#FFFFFF">
       Acaba de iniciar el evento de Halloween en pokemon go. Los pokemon tipo fantasma tienen mas ratio de aparición y hay regalos diarios.
     </div>
   </div>
