--- a/Views/Home/Tierlist.cshtml
+++ b/Views/Home/Tierlist.cshtml
@@ -18,4 +18,11 @@
   <a href="https://tiermaker.com/create/megaevoluciones-575981" target = "blank" class="list-group-item list-group-item-action">Megaevoluciones</a>
   <a class="list-group-item list-group-item-action disabled">Gigamax(Proximamente)</a>
 </div>
+<br>
+<br>
+
+<input type="file"
+       id="avatar" name="avatar"
+       accept="image/png, image/jpeg" style="color:#FFFFFF">
+
 </body>
