--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "";
 }
 <body  background = "/img/algo.jpg">
+</body>
     <div class="text-center">
 <h2 style="color:#FFFFFF">Pokemon creados por la comunidad</h2>
 </div>
@@ -9,6 +10,16 @@
 <br>
 <h3 style="color:#FFFFFF">Buscar Pokemon</h2>
 
+<div class="flexsearch">
+		<div class="flexsearch--wrapper">
+			<form class="flexsearch--form" action="#" method="post">
+				<div class="flexsearch--input-wrapper">
+					<input class="flexsearch--input" type="search" placeholder="search">
+				</div>
+				<input class="flexsearch--submit" type="submit" value="&#10140;"/>
+			</form>
+		</div>
+</div>
 
 
 <h3 style="color:#FFFFFF">Crear Pokemon</h2>
