--- a/Views/Home/Tierlist.cshtml
+++ b/Views/Home/Tierlist.cshtml
@@ -12,6 +12,7 @@
   <a href="#" class="list-group-item list-group-item-action active" aria-current="false">
    Lista Tierlists
   </a>
+  <a href= "TierList1" target = "blank" class="list-group-item list-group-item-action">Iniciales</a>
   <a href="https://tiermaker.com/create/inicialesdepokmon-23530" target = "blank" class="list-group-item list-group-item-action">Iniciales</a>
   <a href="https://tiermaker.com/create/all-pokmon-in-pokmon-unite-15327428" target = "blank" class="list-group-item list-group-item-action">Pokemon Unite</a>
   <a href="https://tiermaker.com/create/vgc-2021--238373" target = "blank" class="list-group-item list-group-item-action">Vgc</a>
@@ -24,5 +25,5 @@
 <input type="file"
        id="avatar" name="avatar"
        accept="image/png, image/jpeg" style="color:#FFFFFF">
-
 </body>
+
