--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Tp09_IgnacioDemarcico_TeoNavarro</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Tp09_IgnacioDemarcico_TeoNavarro.styles.css" asp-append-version="true" />
+    @* <link rel="stylesheet" href="~/Tp09_IgnacioDemarcico_TeoNavarro.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-light">
