actualizacion arreglos tierlist y buscador
falta arreglar

--- a/Views/Home/TierList1.cshtml
+++ b/Views/Home/TierList1.cshtml
@@ -24,7 +24,7 @@
     <div class="label">F</div>
   </div>
 </div>
-<h2>Card Bank <button id="addCard">➕</button></h2> 
+<h2>Card Bank <button id="addCard">   📎</button></h2> 
 
 <div id="bank"></div>
 
