--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,6 @@
     @* <link rel="stylesheet" href="~/Tp09_IgnacioDemarcico_TeoNavarro.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,6 +30,10 @@
           <a class="nav-link disabled">Anime (en construccion)</a>
         </li>
       </ul>
+       <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
