--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,21 +3,21 @@
 }
 
 <head>
-<img src="img/logo.png">
+
 </head>
 
 
 <body  background = "/img/algo.jpg">
-    <div class="text-center">
-    <h1 class="display-4" style="color:#FFFFFF">Pokebae</h1>
-
+<div style="align-items: center; text-align: center">
+<img src="img/log.jpg">
+</div>
 </body>
 
 
 <!--Hacer apartado noticias-->
 
 <div class="row">
-<div class="col-6" id="Col-cards">
+<div class="col-3" id="Col-cards">
 
 <div class="card" style="width: 18rem;">
   <img src="img/not1.jpg" class="card-img-top">
@@ -36,8 +36,8 @@
 </div>
 </div>
 
-<div class="row">
-<div class="col-12">
+<div class="row ">
+<div class="col-6">
 
 <div class="card" style="width: 18rem;">
   <img src="img/not3.jpg" class="card-img-top" >
