--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -2,13 +2,17 @@
     ViewData["Title"] = "";
 }
 <body  background = "/img/algo.jpg">
+<br>
+
 </body>
     <div class="text-center">
 <h2 style="color:#FFFFFF">Pokemon creados por la comunidad</h2>
 </div>
 <br>
 <br>
-<h3 style="color:#FFFFFF">Buscar Pokemon</h2>
+<br>
+<br>
+<br>
 
 
 <h3 style="color:#FFFFFF">Crear Pokemon</h2>
@@ -22,24 +26,24 @@
   <label class="input-group-text" for="inputGroupSelect01">Primer Tipo</label>
   <select class="form-select" id="inputGroupSelect01">
     <option selected>Choose...</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
-    <option value="4">One</option>
-    <option value="5">Two</option>
-    <option value="6">Three</option>
-    <option value="7">One</option>
-    <option value="8">Two</option>
-    <option value="9">Three</option>
-    <option value="10">One</option>
-    <option value="11">Two</option>
-    <option value="12">Three</option>
-    <option value="13">One</option>
-    <option value="14">Two</option>
-    <option value="15">Three</option>
-    <option value="16">One</option>
-    <option value="17">Two</option>
-    <option value="18">Three</option>
+    <option value="1">Fuego</option>
+    <option value="2">Agua</option>
+    <option value="3">Planta</option>
+    <option value="4">Bicho</option>
+    <option value="5">Veneno</option>
+    <option value="6">Volador</option>
+    <option value="7">Hada</option>
+    <option value="8">Dragon</option>
+    <option value="9">Normal</option>
+    <option value="10">Psiquico</option>
+    <option value="11">Fantasma</option>
+    <option value="12">Siniestro</option>
+    <option value="13">Tierra</option>
+    <option value="14">Roca</option>
+    <option value="15">Electrico</option>
+    <option value="16">Lucha</option>
+    <option value="17">Hielo</option>
+    <option value="18">Acero</option>
   </select>
 </div>
 
@@ -47,24 +51,24 @@
   <label class="input-group-text" for="inputGroupSelect01">Segundo Tipo(Opcional)</label>
   <select class="form-select" id="inputGroupSelect01">
     <option selected>Choose...</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
-    <option value="4">One</option>
-    <option value="5">Two</option>
-    <option value="6">Three</option>
-    <option value="7">One</option>
-    <option value="8">Two</option>
-    <option value="9">Three</option>
-    <option value="10">One</option>
-    <option value="11">Two</option>
-    <option value="12">Three</option>
-    <option value="13">One</option>
-    <option value="14">Two</option>
-    <option value="15">Three</option>
-    <option value="16">One</option>
-    <option value="17">Two</option>
-    <option value="18">Three</option>
+    <option value="1">Fuego</option>
+    <option value="2">Agua</option>
+    <option value="3">Planta</option>
+    <option value="4">Bicho</option>
+    <option value="5">Veneno</option>
+    <option value="6">Volador</option>
+    <option value="7">Hada</option>
+    <option value="8">Dragon</option>
+    <option value="9">Normal</option>
+    <option value="10">Psiquico</option>
+    <option value="11">Fantasma</option>
+    <option value="12">Siniestro</option>
+    <option value="13">Tierra</option>
+    <option value="14">Roca</option>
+    <option value="15">Electrico</option>
+    <option value="16">Lucha</option>
+    <option value="17">Hielo</option>
+    <option value="18">Acero</option>
   </select>
 </div>
 
