--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "";
+  ViewData["Title"] = "";
 }
 
 <head>
@@ -7,64 +7,81 @@
 </head>
 
 
-<body  background = "/img/algo.jpg">
-<div style="align-items: center; text-align: center">
-<img src="img/log.jpg">
-</div>
+<body background="/img/fondo.svg">
+  <div style="align-items: center; text-align: center">
+    <img src="img/log.jpg">
+  </div>
 </body>
 
 
 <!--Hacer apartado noticias-->
 
-<div class="row">
-<div class="col-3" id="Col-cards">
+<div class="row" style="margin-top: 5%;">
+  <div class="col-4" id="Col-cards">
 
-<div class="card" style="width: 18rem;">
-  <img src="img/not1.jpg" class="card-img-top">
-  <div class="card-body">
-    <p class="card-text">NOTICIAS SOBRE LOS NUEVOS JUEGOS!</p>
+    <div class="card" style="width: 18rem;">
+      <img src="img/not1.jpg" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">NOTICIAS SOBRE LOS NUEVOS JUEGOS!</p>
+      </div>
+    </div>
   </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <img src="img/not2.jpg" class="card-img-top" >
-  <div class="card-body">
-    <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
+  <div class="col-4" id="Col-cards">
+    <div class="card" style="width: 18rem;">
+      <img src="img/not2.jpg" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
+      </div>
+    </div>
   </div>
-</div>
-
-</div>
-</div>
-
-<div class="row ">
-<div class="col-6">
-
-<div class="card" style="width: 18rem;">
-  <img src="img/not3.jpg" class="card-img-top" >
-  <div class="card-body">
-    <p class="card-text">EL TORNEO MUNDIAL DE POKEMON HA FINALIZADO</p>
+  <div class="col-4" id="Col-cards">
+    <div class="card" style="width: 18rem;">
+      <img src="img/not2.jpg" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
+      </div>
+    </div>
   </div>
+  
 </div>
 
-<div class="card" style="width: 18rem;">
-  <img src="img/not4.jpg" class="card-img-top">
-  <div class="card-body">
-    <p class="card-text">NUEVO SET DE CARTAS "ORIGEN PERDIDO"</p>
+<div class="row " style="margin-top: 5%;">
+  <div class="col-4">
+
+    <div class="card" style="width: 18rem;">
+      <img src="img/not3.jpg" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">EL TORNEO MUNDIAL DE POKEMON HA FINALIZADO</p>
+      </div>
+    </div>
   </div>
-</div>
-
-</div>
+  <div class="col-4">
+    <div class="card" style="width: 18rem;">
+      <img src="img/not4.jpg" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">NUEVO SET DE CARTAS "ORIGEN PERDIDO"</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-4" id="Col-cards">
+    <div class="card" style="width: 18rem;">
+      <img src="img/not2.jpg" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
+      </div>
+    </div>
+  </div>
 </div>
 
 <br></br>
 <div class="container text-center">
   <div class="row align-items-start">
     <div class="col" style="color:#FFFFFF">
-      En otras noticias, Se ha anunciado un nuevo pokemon llamado Greavard del tipo fantasma para el pokemon escarlata y púrpura.
+      En otras noticias, Se ha anunciado un nuevo pokemon llamado Greavard del tipo fantasma para el pokemon escarlata y
+      púrpura.
     </div>
     <div class="col" style="color:#FFFFFF">
-      Acaba de iniciar el evento de Halloween en pokemon go. Los pokemon tipo fantasma tienen mas ratio de aparición y hay regalos diarios.
+      Acaba de iniciar el evento de Halloween en pokemon go. Los pokemon tipo fantasma tienen mas ratio de aparición y
+      hay regalos diarios.
     </div>
   </div>
-
-
