--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,18 +30,33 @@
         <li class="nav-item">
           <a class="nav-link disabled">Anime (en construccion)</a>
         </li>
-        <li class="nav-item">
-          <form class="flexsearch--form" action="#" method="post" style="text-allign: right">
-            <div class="flexsearch--input-wrapper">
-              <input class="flexsearch--input" type="search" placeholder="search">
-            </div>
-          </form>
-        </li>
+        <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="PokemonBusqueda">
+        <button class="btn btn-outline-success" type="submit" onclick = "VerInfoPokemon(PokemonBusqueda)">Search</button>
+      </form>
 </div>
       </ul>
+        
     </div>
   </div>
 </nav>
+<div class="modal" tabindex="-1" id="ModalJugador">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
