--- a/Views/Home/Tierlist.cshtml
+++ b/Views/Home/Tierlist.cshtml
@@ -1,13 +1,13 @@
 @{
     ViewData["Title"] = "";
 }
- <h1>Tierlist</h1>
+ <h1 style="color:#FFFFFF">Tierlists</h1>
 
 <head>
 <br>
 </head>
 
-<body background = "/img/algo.jpg">
+<body background="/img/fondo.svg">
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action active" aria-current="false">
    Lista Tierlists
