--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Comunidad">Comunidad</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Juegos">Juegos</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link disabled">Anime (en construccion)</a>
         </li>
