--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -7,7 +7,16 @@
 </body>
     <div class="text-center">
 <h2 style="color:#FFFFFF">Pokemon creados por la comunidad</h2>
-</div>
+
+  <div class="col-4" id="Col-cards">
+    <div class="card" style="width: 18rem;">
+      <img src="img/not5.jpg" class="card-img-top">
+      <div class="card-body">
+        <p class="card-text">SE FILTRA LA POKEDEX DE LOS NUEVOS JUEGOS!</p>
+      </div>
+    </div>
+  </div>
+  
 <br>
 <br>
 <br>
