--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -36,9 +36,9 @@
   </div>
   <div class="col-4" id="Col-cards">
     <div class="card" style="width: 18rem;">
-      <img src="img/not2.jpg" class="card-img-top">
+      <img src="img/not5.jpg" class="card-img-top">
       <div class="card-body">
-        <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
+        <p class="card-text">SE FILTRA LA POKEDEX DE LOS NUEVOS JUEGOS!</p>
       </div>
     </div>
   </div>
@@ -65,9 +65,9 @@
   </div>
   <div class="col-4" id="Col-cards">
     <div class="card" style="width: 18rem;">
-      <img src="img/not2.jpg" class="card-img-top">
+      <img src="img/not6.jpg" class="card-img-top">
       <div class="card-body">
-        <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
+        <p class="card-text">BARBEQ SE PROCLAMA CAPEON DE LA POKEMON TWITCH CUP</p>
       </div>
     </div>
   </div>
