View juegos casi lista

--- a/Views/Home/Juegos.cshtml
+++ b/Views/Home/Juegos.cshtml
@@ -5,19 +5,15 @@
 <br>
 <br>
 <div class="row">
-@foreach (Juego item in ViewBag.ListaJuegos)
+@foreach (Juego item in ViewBag.ListarJuegos)
 {
     <div class="col-3">
     <div class="card text-bg-dark mb-3" style="width: 20rem; display: flex; text-align: center;">
-        <img src="@item.ImagenSerie" class="card-img-top">
+        <img src="@item.FotoJuego" class="card-img-top">
         <div class="card-body" >
             <h5 class="card-title">@item.Nombre</h5>
-            <button type="button" href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalSerie"
-            onclick="MostrarInfoSerie(@item.IdSerie)"> Info </button>
-            <button type="button" href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalSerie"
-            onclick="MostrarActoresSerie(@item.IdSerie, '@item.Nombre')"> Actores </button>
-            <button type="button" href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalSerie"
-            onclick="MostrarTemporadasSerie(@item.IdSerie, '@item.Nombre')"> Temporadas </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalJuegos"
+            onclick="MostrarInfoJuegos('@item.Nombre')">Info</button>
         </div>
     </div>
     </div>
@@ -25,6 +21,25 @@
 </div>
 
 </body>
-<h2>modals con ajax</h2>
 
-<h2>cuando los abris te aparecen los datos de las cosas</h2>
+
+<div class="modal" tabindex="-1" id="modalJuegos">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ModalTitulo">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div id="Nombre"></div>
+        <div id="Region"></div>
+        <div id="FechaSalida"></div>
+        <div id="Generacion"></div>
+        <div id="Pokedex"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
