Juegos arreglados y tierlist tmb
falta arreglar cards, hacer competitivo y los modals con ajax ademas de lo de crear pokemon

--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -24,7 +24,8 @@
 <br>
 
 
-<h3 style="color:#FFFFFF">Crear Pokemon</h2>
+<h3 style="color:#FFFFFF">Creador de Pokemons</h2>
+<br>
 
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon1">Nombre</span>
@@ -95,3 +96,8 @@
   <input type="file" class="form-control" id="inputGroupFile02">
   <label class="input-group-text" for="inputGroupFile02">Upload</label>
 </div>
+<br>
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+  <button type="button" class="btn btn-primary btn-lg">Crear Pokemon</button>
+</div>
+
