--- a/Views/Home/Tierlist.cshtml
+++ b/Views/Home/Tierlist.cshtml
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="~/css/stylesTierList.css" asp-append-version="true" />
 
-<body background="/img/fondo.svg">
+<body>
   <span class="headerContainer">
       <h1 style="color:#FFFFFF">TierList</h1>
 </span>
