--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -1,103 +1,111 @@
 @{
-    ViewData["Title"] = "";
+  ViewData["Title"] = "";
 }
-<body background="/img/fondo.svg">
-<br>
+
+<body>
+  <br>
 
 </body>
-    <div class="text-center">
-<h2 style="color:#FFFFFF">Pokemon creados por la comunidad</h2>
-
-  <div class="col-4" id="Col-cards">
-    <div class="card" style="width: 18rem;">
-      <img src="img/not5.jpg" class="card-img-top">
-      <div class="card-body">
-        <p class="card-text">SE FILTRA LA POKEDEX DE LOS NUEVOS JUEGOS!</p>
+<h2 style="color:#FFFFFF" class="text-center">Pokemon creados por la comunidad</h2>
+  <div class="row">
+    <div id="carusel-comunidad" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/img/PK3.png" class="carusel-img">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/PK1.jpg" class="carusel-img" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/p1.jpg" class="carusel-img " alt="...">
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carusel-comunidad"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carusel-comunidad"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
-  
-<br>
-<br>
-<br>
-<br>
-<br>
+<div class="text-center">
+  <h3 style="color:#FFFFFF">Creador de Pokemons</h2>
+    <br>
 
+    <div class="input-group mb-3">
+      <span class="input-group-text" id="basic-addon1">Nombre</span>
+      <input type="text" class="form-control" aria-describedby="basic-addon1">
+    </div>
 
-<h3 style="color:#FFFFFF">Creador de Pokemons</h2>
-<br>
+    <div class="input-group mb-3">
+      <label class="input-group-text" for="inputGroupSelect01">Primer Tipo</label>
+      <select class="form-select" id="inputGroupSelect01">
+        <option selected>Choose...</option>
+        <option value="1">Fuego</option>
+        <option value="2">Agua</option>
+        <option value="3">Planta</option>
+        <option value="4">Bicho</option>
+        <option value="5">Veneno</option>
+        <option value="6">Volador</option>
+        <option value="7">Hada</option>
+        <option value="8">Dragon</option>
+        <option value="9">Normal</option>
+        <option value="10">Psiquico</option>
+        <option value="11">Fantasma</option>
+        <option value="12">Siniestro</option>
+        <option value="13">Tierra</option>
+        <option value="14">Roca</option>
+        <option value="15">Electrico</option>
+        <option value="16">Lucha</option>
+        <option value="17">Hielo</option>
+        <option value="18">Acero</option>
+      </select>
+    </div>
 
-<div class="input-group mb-3">
-  <span class="input-group-text" id="basic-addon1">Nombre</span>
-  <input type="text" class="form-control" aria-describedby="basic-addon1">
-</div>
+    <div class="input-group mb-3">
+      <label class="input-group-text" for="inputGroupSelect01">Segundo Tipo(Opcional)</label>
+      <select class="form-select" id="inputGroupSelect01">
+        <option selected>Choose...</option>
+        <option value="1">Fuego</option>
+        <option value="2">Agua</option>
+        <option value="3">Planta</option>
+        <option value="4">Bicho</option>
+        <option value="5">Veneno</option>
+        <option value="6">Volador</option>
+        <option value="7">Hada</option>
+        <option value="8">Dragon</option>
+        <option value="9">Normal</option>
+        <option value="10">Psiquico</option>
+        <option value="11">Fantasma</option>
+        <option value="12">Siniestro</option>
+        <option value="13">Tierra</option>
+        <option value="14">Roca</option>
+        <option value="15">Electrico</option>
+        <option value="16">Lucha</option>
+        <option value="17">Hielo</option>
+        <option value="18">Acero</option>
+      </select>
+    </div>
 
-<div class="input-group mb-3">
-  <label class="input-group-text" for="inputGroupSelect01">Primer Tipo</label>
-  <select class="form-select" id="inputGroupSelect01">
-    <option selected>Choose...</option>
-    <option value="1">Fuego</option>
-    <option value="2">Agua</option>
-    <option value="3">Planta</option>
-    <option value="4">Bicho</option>
-    <option value="5">Veneno</option>
-    <option value="6">Volador</option>
-    <option value="7">Hada</option>
-    <option value="8">Dragon</option>
-    <option value="9">Normal</option>
-    <option value="10">Psiquico</option>
-    <option value="11">Fantasma</option>
-    <option value="12">Siniestro</option>
-    <option value="13">Tierra</option>
-    <option value="14">Roca</option>
-    <option value="15">Electrico</option>
-    <option value="16">Lucha</option>
-    <option value="17">Hielo</option>
-    <option value="18">Acero</option>
-  </select>
-</div>
+    <div class="input-group mb-3">
+      <span class="input-group-text" id="basic-addon3">Altura</span>
+      <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+    </div>
 
-<div class="input-group mb-3">
-  <label class="input-group-text" for="inputGroupSelect01">Segundo Tipo(Opcional)</label>
-  <select class="form-select" id="inputGroupSelect01">
-    <option selected>Choose...</option>
-    <option value="1">Fuego</option>
-    <option value="2">Agua</option>
-    <option value="3">Planta</option>
-    <option value="4">Bicho</option>
-    <option value="5">Veneno</option>
-    <option value="6">Volador</option>
-    <option value="7">Hada</option>
-    <option value="8">Dragon</option>
-    <option value="9">Normal</option>
-    <option value="10">Psiquico</option>
-    <option value="11">Fantasma</option>
-    <option value="12">Siniestro</option>
-    <option value="13">Tierra</option>
-    <option value="14">Roca</option>
-    <option value="15">Electrico</option>
-    <option value="16">Lucha</option>
-    <option value="17">Hielo</option>
-    <option value="18">Acero</option>
-  </select>
-</div>
+    <div class="input-group mb-3">
+      <span class="input-group-text" id="basic-addon3">Peso</span>
+      <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+    </div>
 
-<div class="input-group mb-3">
-  <span class="input-group-text" id="basic-addon3">Altura</span>
-  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
-</div>
-
-<div class="input-group mb-3">
-  <span class="input-group-text" id="basic-addon3">Peso</span>
-  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
-</div>
-
-<div class="input-group mb-3">
-  <input type="file" class="form-control" id="inputGroupFile02">
-  <label class="input-group-text" for="inputGroupFile02">Upload</label>
-</div>
-<br>
-<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-  <button type="button" class="btn btn-primary btn-lg">Crear Pokemon</button>
-</div>
-
+    <div class="input-group mb-3">
+      <input type="file" class="form-control" id="inputGroupFile02">
+      <label class="input-group-text" for="inputGroupFile02">Upload</label>
+    </div>
+    <br>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      <button type="button" class="btn btn-primary btn-lg">Crear Pokemon</button>
+    </div>
