--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
 </head>
 
 
-<body background="/img/fondo.svg">
+<body></body>
   <div style="align-items: center; text-align: center">
-    <img src="img/log.jpg">
+    <img src="img/logopoke.png">
   </div>
 </body>
 
@@ -17,7 +17,7 @@
 <!--Hacer apartado noticias-->
 
 <div class="row" style="margin-top: 5%;">
-  <div class="col-4" id="Col-cards">
+  <div class="col-4">
 
     <div class="card" style="width: 18rem;">
       <img src="img/not1.jpg" class="card-img-top">
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4" id="Col-cards">
+  <div class="col-4">
     <div class="card" style="width: 18rem;">
       <img src="img/not2.jpg" class="card-img-top">
       <div class="card-body">
@@ -34,7 +34,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4" id="Col-cards">
+  <div class="col-4">
     <div class="card" style="width: 18rem;">
       <img src="img/not5.jpg" class="card-img-top">
       <div class="card-body">
