--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     @* <link rel="stylesheet" href="~/Tp09_IgnacioDemarcico_TeoNavarro.styles.css" asp-append-version="true" /> *@
 </head>
-<body>
+<body background="">
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">Home</a>
