View compe y noticias

--- a/Views/Home/Compe.cshtml
+++ b/Views/Home/Compe.cshtml
@@ -1,8 +1,37 @@
 @{
     ViewData["Title"] = "";
 }
-<h1> Estrategias VGC </h1>
+<body class="letra">
 
-<h2 href="https://youtu.be/Hol__AToYqY">El equipo del campeon explicado</h2>
+<div class="row" style="margin-top: 20px;">
+  <div class="col-4">
+    <h1> Estrategias VGC </h1>
+    <a href="https://youtu.be/Hol__AToYqY">El equipo del campeon explicado</a>
+    <br>
+    <a href="https://victoryroadvgc.com/es/pokemon-espada-escudo-equipos-prestamo-vgc/">Equipos competitivos</a>
+    <br>
+    <a href="https://pokemonshowdown.com/">Donde practicar VGC</a>
+  </div>
 
-<h2 href="https://pokemonshowdown.com/">Donde practicar VGC</h2>
+  <div class="col-4">
+    <h1> Estrategias Pokemon GO </h1>
+    <a href="https://www.youtube.com/watch?v=TG2--m5ajKA">El combate a detalle</a>
+    <br>
+    <a href="https://www.dexerto.es/pokemon/mejores-equipos-para-la-liga-superball-en-pokemon-go-1442844/">Equipos competitivos</a>
+  </div>
+
+  <div class="col-4">
+    <h1> Estrategias JCC </h1>
+    <a href="https://www.youtube.com/watch?v=7HeMO05rZXw">Modalidad explicada</a>
+    <br>
+    <a href="https://www.pokemon.com/es/estrategia/estrategias-basicas-listas-para-usar-en-competiciones">Equipos competitivos</a>
+    <br>
+    <a href="https://www.pokemon.com/el/jcc-pokemon/jugar-en-linea/descargar/">Donde practicar JCC</a>
+  </div>
+
+</div>
+
+
+
+
+</body>
