--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 
 
-<body></body>
+<body>
   <div style="align-items: center; text-align: center">
     <img src="img/logopoke.png">
   </div>
@@ -20,52 +20,55 @@
   <div class="col-4">
 
     <div class="card" style="width: 18rem;">
-      <img src="img/not1.jpg" class="card-img-top">
+      <a href="https://scarletviolet.pokemon.com/es-mx/"><img src="img/not1.jpg" class="card-img-top"></a>
       <div class="card-body">
         <p class="card-text">NOTICIAS SOBRE LOS NUEVOS JUEGOS!</p>
       </div>
     </div>
   </div>
+
   <div class="col-4">
     <div class="card" style="width: 18rem;">
-      <img src="img/not2.jpg" class="card-img-top">
+      <a href="https://www.nintenderos.com/2022/11/avance-de-la-parte-final-del-enfrentamiento-entre-ash-y-lionel-en-el-anime-viajes-pokemon/"><img src="img/not2.jpg" class="card-img-top"></a>
       <div class="card-body">
         <p class="card-text">EL ANIME DE POKEMON ESTA A PUNTO DE ACABAR!</p>
       </div>
     </div>
   </div>
+
   <div class="col-4">
     <div class="card" style="width: 18rem;">
-      <img src="img/not5.jpg" class="card-img-top">
+      <a href="https://www.youtube.com/watch?v=1T2qZkHm8VY"><img src="img/not5.jpg" class="card-img-top"></a>
       <div class="card-body">
         <p class="card-text">SE FILTRA LA POKEDEX DE LOS NUEVOS JUEGOS!</p>
       </div>
     </div>
   </div>
-  
+        
 </div>
 
 <div class="row " style="margin-top: 5%;">
   <div class="col-4">
-
     <div class="card" style="width: 18rem;">
-      <img src="img/not3.jpg" class="card-img-top">
+      <a href="https://www.esportmaniacos.com/pokemon/todos-los-campeones-mundial-pokemon-2022/#:~:text=VGC%3A%20Eduardo%20%E2%80%9CEmbC%E2%80%9D%20Cunha"><img src="img/not3.jpg" class="card-img-top"></a>
       <div class="card-body">
         <p class="card-text">EL TORNEO MUNDIAL DE POKEMON HA FINALIZADO</p>
       </div>
     </div>
   </div>
+
   <div class="col-4">
     <div class="card" style="width: 18rem;">
-      <img src="img/not4.jpg" class="card-img-top">
+      <a href="https://pokeadostcg.com/blog/21-info-origen-perdido"><img src="img/not4.jpg" class="card-img-top"></a>
       <div class="card-body">
         <p class="card-text">NUEVO SET DE CARTAS "ORIGEN PERDIDO"</p>
       </div>
     </div>
   </div>
+
   <div class="col-4" id="Col-cards">
     <div class="card" style="width: 18rem;">
-      <img src="img/not6.jpg" class="card-img-top">
+      <a href="https://www.marca.com/videojuegos/lo-mas-gaming/2021/07/01/60dda34446163f478a8b461d.html"><img src="img/not6.jpg" class="card-img-top"></a>
       <div class="card-body">
         <p class="card-text">BARBEQ SE PROCLAMA CAPEON DE LA POKEMON TWITCH CUP</p>
       </div>
@@ -85,3 +88,4 @@
       hay regalos diarios.
     </div>
   </div>
+</div>
