--- a/Views/Home/Comunidad.cshtml
+++ b/Views/Home/Comunidad.cshtml
@@ -11,13 +11,13 @@
     <div id="carusel-comunidad" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/img/PK3.png" class="carusel-img">
+          <img src="/img/pokemon1.jpg" class="carusel-img">
         </div>
         <div class="carousel-item">
-          <img src="/img/PK1.jpg" class="carusel-img" alt="...">
+          <img src="/img/pokemon2.jpg" class="carusel-img" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/img/p1.jpg" class="carusel-img " alt="...">
+          <img src="/img/pokemon3.jpg" class="carusel-img " alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carusel-comunidad"
@@ -45,7 +45,7 @@
       <label class="input-group-text" for="inputGroupSelect01">Primer Tipo</label>
       <select class="form-select" id="inputGroupSelect01">
         <option selected>Choose...</option>
-        <option value="1">Fuego</option>
+        <option value="1" >Fuego</option>
         <option value="2">Agua</option>
         <option value="3">Planta</option>
         <option value="4">Bicho</option>
