--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 
 
-<body></body>
+<body>
   <div style="align-items: center; text-align: center">
     <img src="img/logopoke.png">
   </div>
