--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,6 +19,7 @@ body {
 
 .card-img-top{
   max-height: 150px;
+
 }
 
 .carusel-img{
@@ -34,4 +35,9 @@ body{
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23161616' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%232c2c2c' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23434343' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23595959' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%236F6F6F' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
+}
+
+.col-4
+{
+  padding-left: 5%;
 }
